# ChangeLog for sci-astronomy/astrometry
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Mar 2014; Joseph Jon Booker <joe@neoturbine.net> astrometry-0.43.ebuild:
  Use python-single-r1 and fix typo for USE=extra

  14 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  sci-astronomy/astrometry: Added extra use flag to plot

  14 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> astrometry-0.43.ebuild,
  files/0.43-system-libs.patch, metadata.xml:
  sci-astronomy/astrometry: Added python bindings. Fixed more gsl bundling

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> astrometry-0.43.ebuild,
  metadata.xml:
  Fix unquoted variable

*astrometry-0.43 (14 Jun 2013)

  14 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +astrometry-0.43.ebuild,
  +files/0.43-as-needed.patch, +files/0.43-respect-user-flags.patch,
  +files/0.43-system-libs.patch, -astrometry-0.38.ebuild,
  -files/0.38-array-bounds.patch, -files/0.38-as-needed.patch,
  -files/0.38-missing-headers.patch, -files/0.38-respect-user-flags.patch,
  -files/0.38-strict-aliasing.patch, -files/0.38-system-libs.patch,
  metadata.xml:
  sci-astronomy/astrometry: Version bump. Rewrote the patches

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> astrometry-0.38.ebuild,
  metadata.xml:
  Clean wrong space and blank lines

*astrometry-0.38 (09 May 2012)

  09 May 2012; Sébastien Fabbro <bicatali@gentoo.org> +astrometry-0.38.ebuild,
  +files/0.38-array-bounds.patch, +files/0.38-as-needed.patch,
  +files/0.38-missing-headers.patch, +files/0.38-respect-user-flags.patch,
  +files/0.38-strict-aliasing.patch, +files/0.38-system-libs.patch,
  +metadata.xml:
  sci-astronomy/astrometry: Initial import