@@ -1,10 +1,11 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_6 python2_7 )
+PYTHON_COMPAT=( python2_7 )
+
 inherit eutils toolchain-funcs python-single-r1
 
 MYP=${PN}.net-${PV}
@@ -15,7 +16,6 @@ SRC_URI="${HOMEPAGE}/downloads/${MYP}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE="examples extra python"
 
@@ -27,12 +27,12 @@ RDEPEND="
 	sys-libs/zlib
 	virtual/pyfits[${PYTHON_USEDEP}]
 	extra? (
-		media-libs/libpng
+		media-libs/libpng:0
 		media-libs/netpbm
-		virtual/jpeg
+		virtual/jpeg:0
 		x11-libs/cairo )"
 DEPEND="${RDEPEND}
-	dev-lang/swig
+	dev-lang/swig:0
 	virtual/pkgconfig"
 
 S="${WORKDIR}/${MYP}"
@@ -44,11 +44,11 @@ src_prepare() {
 		"${FILESDIR}"/0.43-system-libs.patch
 
 	python_fix_shebang "${S}"
-	sed "s|python setup-util.py|${EPYTHON} setup-util.py|" "${S}"/util/Makefile -i
-	sed "s|python setup.py|${EPYTHON} setup.py|" "${S}"/{libkd,sdss,blind}/Makefile -i
-	sed "s|python -c|${EPYTHON} -c|" "${S}"/blind/Makefile -i
-	sed "s|python <<EOF|${EPYTHON} <<EOF|" "${S}"/blind/simplexy.c -i
-	sed "s|python -V|${EPYTHON} -V|" "${S}"/Makefile -i
+	sed "s|python setup-util.py|${EPYTHON} setup-util.py|" "${S}"/util/Makefile -i || die
+	sed "s|python setup.py|${EPYTHON} setup.py|" "${S}"/{libkd,sdss,blind}/Makefile -i || die
+	sed "s|python -c|${EPYTHON} -c|" "${S}"/blind/Makefile -i || die
+	sed "s|python <<EOF|${EPYTHON} <<EOF|" "${S}"/blind/simplexy.c -i || die
+	sed "s|python -V|${EPYTHON} -V|" "${S}"/Makefile -i || die
 }
 
 src_compile() {
