@@ -1,6 +1,10 @@
 # ChangeLog for sci-astronomy/astrometry
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Feb 2015; Justin Lecher <jlec@gentoo.org> astrometry-0.43.ebuild,
+  metadata.xml:
+  sci-astronomy/astrometry: fix SLOT operators; fix usage of die
 
   17 Mar 2014; Joseph Jon Booker <joe@neoturbine.net> astrometry-0.43.ebuild:
   Use python-single-r1 and fix typo for USE=extra
